fixed the card-width and added flex-wrap 'wrap' so that elements shifts to next line

--- a/main.css
+++ b/main.css
@@ -4,18 +4,20 @@
     align-items: center;
 } */
 
-.intro {
+body{
     text-align: center;
+}
+
+.card {
+    width: 350px;
 }
 
 .projects {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .about {
     margin-top: 120px;
-}
-.section-heading {
-    text-align: center;
 }
